tests/evaluator/should_pass/optional_timed_function.csp
channel tock
channel c : {0..1}

Timed {
    P = c.0 -> STOP
}

procTest1 = P
