tests/evaluator/should_fail/rep_internal_choice.csp
channel c : {0..1}

P = |~| x : {} @ c.x  -> STOP

procTest1 = P
